2002-11-15  Dave Love  <fx@gnu.org>

	* configure.in: Tidy up various quoting issues throughout.  Use
	AC_GNU_SOURCE.
	(AH_BOTTOM): Fix #endif protecting config.h.  Maybe include
	alloca.h.  Define GC_SETJMP_WORKS, GC_LISP_OBJECT_ALIGNMENT.
	Maybe define bcopy, bzero, bcmp.
	(powerpcle-*-solaris2.5*, powerpcle-*-solaris2*): Removed (use
	non-existent machine file).
	(sys/vlimit.h, sys/resource.h, fsync, __restrict): Test for.
	(term.h, X11/Xaw3d/Scrollbar.h): Avoid warning from test.
	(nlist.h): Move test up.

2002-11-18   Markus Rost  <rost@math.ohio-state.edu>

	* configure.in (*-sunos5*, *-solaris*): New configuration.

2002-11-14  Francesco Potorti`  <pot@gnu.org>

	* configure.in (*-sunos5.8*, *-solaris2.8*): New configurations.

2002-11-11  Tim Van Holder  <tim.vanholder@anubex.com>  (tiny change)

	* Makefile.in (install-arch-indep): Prepend $(srcdir)/ to lisp.

2002-11-08  Dave Love  <fx@gnu.org>

	* configure.in: Use AC_CONFIG_LIBOBJ_DIR and require autoconf
	2.54.
	(AH_BOTTOM) [!HAVE_SIZE_T]: Typedef size_t.

2002-11-07  Miles Bader  <miles@gnu.org>

	* Makefile.in (maybe_bootstrap): Fix shell variable usage.  Handle
	separate-build-dir case.

2002-11-06  Richard M. Stallman  <rms@gnu.org>

	* Makefile.in (maybe_bootstrap): Add doublequotes to make it
	bulletproof.  $bar may be empty when there are no .elc files.

2002-10-30  Dave Love  <fx@gnu.org>

	* configure.in:  Require autoconf 2.53.  Test for pty.h,
	sys/mman.h, sys/param.h, mremap, memmove.
	(AH_BOTTOM): Maybe include strings.h.  Add local variables for
	mode.
	(AC_PROG_YACC): Deleted.
	(size_t): Use AC_CHECK_TYPES.
	(AH_TOP): Up-date copyright.

2002-10-01  Juanma Barranquero  <lektu@terra.es>

	* update-subdirs: Add "no-byte-compile: t" to subdirs.el.

2002-09-19  Richard M. Stallman  <rms@gnu.org>

	* configure.in: Fix the LessTif-directory-finder for real.

2002-09-14  Richard M. Stallman  <rms@gnu.org>

	* Makefile.in (maybe_bootstrap): Test for complete absence
	of compiled Lisp files.
